# slambook2

./: .gitignore  README.md  README_ficoUbuntu20.md
ch10/: CMakeLists.txt
ch12/: CMakeLists.txt  origin.txt  saved_mesh_ascii0.ply  saved_mesh_ascii_medusa.ply
ch12/dense_RGBD/: CMakeLists.txt  pointcloud_mapping.cpp  surfel_mapping.cpp
ch12/dense_mono/: CMakeLists.txt  dense_mapping.cpp  dense_mapping_original_KO_fyNegative.cpp  monodense_mapping_reducedMarkerROI_ko.cpp
ch3/: CMakeLists.txt
ch3/useEigen/: CMakeLists.txt
ch5/: CMakeLists.txt
ch7/: CMakeLists.txt  orb_cv.cpp  orb_self.cpp  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp  pose_estimation_3d2d_rs435_solvePnP.cpp  pose_estimation_3d3d.cpp  pose_estimation_3d3d_rs435.cpp  triangulation.cpp
ch8/: CMakeLists.txt
ch9/: CMakeLists.txt  CMakeListsKO.txt  README.md  TODO.md  bundle_adjustment_ceres.cpp  bundle_adjustment_g2o.cpp  final.ply  justMapCameras_withSameCalib.txt  mybundle_adjustment_g2o.cpp  mybundle_adjustment_g2o_notRefineCalib.cpp  problem-16-22106-pre_SameCalib_Not1st2ndCamsUNUSED.txt
ch9/3cameras/: OKproblem-16-22106-filterCameras.ods  initial.ply  problem-16-22106-3cam.txt  problem-16-22106-filter.ods  problem-16-22106-filter3Cameras.ods  problem-16-22106-filterCameras.ods  problem-16-22106-pre.ods  resultCeres.txt
ch9/5camerasOther/: _finalBA.ply  _initialVO.ply  inputCeres.txt  logMap.csv  logMap.ods  logPoses.csv  note.txt
ch9/analysis_ceres/: 0final.ply  1final.ply  comparision  txt  pos cam inv   to  pt ply.ods  resultCeres.txt
ch9/analysis_g2o/: 0final.ply  0final_initSameCalib.ply  result postBA.txt  result postBA_just2iterations.txt  result postBA_just2iterations_initSameCalib.txt  (+5 more)
(+6 files in other folders)
